[Fix] change animation for dark mode

--- a/sseukssak/src/components/styles/main.scss
+++ b/sseukssak/src/components/styles/main.scss
@@ -41,6 +41,41 @@ body {
   padding-top: 12px;
 }
 
+.menu--logo {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+  color: white;
+  position: relative;
+  &.active {
+    &:before {
+      content: "";
+      position: absolute;
+      left: 0;
+      width: 13px;
+      background: white;
+      height: 46px;
+      border-radius: 33px;
+      margin-left: -19px;
+    }
+  }
+  &:hover {
+    border-radius: 20%;
+    background: var(--color-purple);
+  }
+}
+
+.menu--logo img {
+  width: 75%;
+  height: 75%;
+}
+
 .menu--icon {
   width: 50px;
   height: 50px;
